--- a/app.yaml
+++ b/app.yaml
@@ -13,7 +13,7 @@ app: nginx ---
 apiVersion: apps/v1 
 kind: Deployment 
 metadata: 
-name: k8s-activity-yourname #change this 
+name: k8s-activity-Balaibo
 labels: 
 app: nginx 
 spec: 
