--- a/app.yaml
+++ b/app.yaml
@@ -27,15 +27,20 @@ metadata:
 labels: 
 app: nginx 
 spec: 
-initContainers: - name: init-html 
+initContainers: 
+- name: init-html 
 image: curlimages/curl 
 command: ["sh", "-c", "curl -o /usr/share/nginx/html/index.html https://raw.githubusercontent.com/Enuj06/KubeActivity/main/index.html"]
-volumeMounts: - name: html-volume 
+volumeMounts: 
+- name: html-volume 
 mountPath: /usr/share/nginx/html 
-containers: - name: nginx 
+containers: 
+- name: nginx 
 image: nginx:1.14.2 
 ports: - containerPort: 80 
-volumeMounts: - name: html-volume 
+volumeMounts: 
+- name: html-volume 
 mountPath: /usr/share/nginx/html 
-volumes: - name: html-volume 
+volumes: 
+- name: html-volume 
 emptyDir: {} 
