--- a/app.yaml
+++ b/app.yaml
@@ -37,7 +37,8 @@ mountPath: /usr/share/nginx/html
 containers: 
 - name: nginx 
 image: nginx:1.14.2 
-ports: - containerPort: 80 
+ports: 
+- containerPort: 80 
 volumeMounts: 
 - name: html-volume 
 mountPath: /usr/share/nginx/html 
