--- a/app.yaml
+++ b/app.yaml
@@ -10,7 +10,8 @@ ports:
 - port: 80 
 targetPort: 80 
 selector: 
-app: nginx --- 
+app: nginx 
+--- 
 apiVersion: apps/v1 
 kind: Deployment 
 metadata: 
@@ -27,7 +28,7 @@ metadata:
 labels: 
 app: nginx 
 spec: 
-initContainers:
+initContainers: 
 - name: init-html 
 image: curlimages/curl 
 command: ["sh", "-c", "curl -o /usr/share/nginx/html/index.html https://raw.githubusercontent.com/Enuj06/KubeActivity/main/index.html"]
@@ -36,12 +37,12 @@ volumeMounts:
 mountPath: /usr/share/nginx/html 
 containers: 
 - name: nginx 
-image: nginx:1.14.2
-ports:
+image: nginx:1.14.2 
+ports: 
 - containerPort: 80 
 volumeMounts: 
 - name: html-volume 
 mountPath: /usr/share/nginx/html 
 volumes: 
 - name: html-volume 
-emptyDir: {}
+emptyDir: {} 
