--- a/app.yaml
+++ b/app.yaml
@@ -15,7 +15,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: k8s-activity-balaibo
+  name: k8s-activity-bal
   labels:
     app: nginx
 spec:
